Added Family, hireme, about me

--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -40,11 +40,11 @@ $button-padding-vertical: 10px;
 $button-padding-horizontal: 15px;
 
 // Typography
-$base-font-family: "Open Sans",san-serif;
-$font-Regular: "OpenSansRegular";
-$font-Light: "OpenSansLight";
-$font-Bold: "OpenSansBold";
-$base-font: $font-Regular;
+$base-font-family: "Muli", sans-serif;
+$font-Regular: "MuliRegular";
+$font-Light: "MuliLight";
+$font-Bold: "MuliBold";
+$base-font: "Muli";
 
 // Font Sizes
 $base-font-size: 14px;
