--- a/src/styles/components/_fonts.scss
+++ b/src/styles/components/_fonts.scss
@@ -1,23 +1,24 @@
 @font-face {
-  font-family: $font-Regular;
-  src: url('../assets/fonts/opensans-regular-webfont.woff2') format('woff2'),
-  url('../assets/fonts/opensans-regular-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
   font-family: $font-Light;
-  src: url('../assets/fonts/opensans-light-webfont.woff2') format('woff2'),
-  url('../assets/fonts/opensans-light-webfont.woff') format('woff');
+  src: url('../assets/fonts/Muli-Light.ttf') format('ttf'),
+  url('../assets/fonts/Muli-Light.ttf') format('ttf');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: $font-Bold;
-  src: url('../assets/fonts/opensans-bold-webfont.woff2') format('woff2'),
-  url('../assets/fonts/opensans-bold-webfont.woff') format('woff');
+  src: url('../assets/fonts/Muli-Bold.ttf') format('ttf'),
+  url('../assets/fonts/Muli-Bold.ttf') format('ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: $font-Regular;
+  src: url('../assets/fonts/Muli-Regular.ttf') format('ttf'),
+  url('../assets/fonts/Muli-Regular.ttf') format('ttf');
   font-weight: normal;
   font-style: normal;
 }
