--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -1,3 +1,69 @@
+.menu-item {
+  text-decoration: none;
+}
+
+.menu-item:visited {
+  color: white;
+}
+
+.menu-item:focus {
+  color: #50E3C2;
+}
+
+.li-menu-item:focus {
+  outline: none;
+}
+
+.li-menu-item:active {
+  border: 5px solid #50E3C2;
+  outline: none;
+}
+
+.li-menu-item:visited {
+  border: 5px solid transparent;
+  outline: none;
+}
+
+.nav-down{
+  position: absolute;
+  bottom: 0px;
+  display: inline-flex!important;
+  outline: none;
+}
+
+.nav-down-li{
+  display: inline-block;
+}
+
+.nav-down-li:not(:last-child)::after {
+  content: "|";
+  padding-right: 25px;
+  padding-left: 25px;
+  font-size: 20px;
+}
+
+.small-icons {
+  display: inline-block;
+  padding: 3px;
+  font-size: 20px;
+}
+
+.small-icons {
+  text-decoration: none;
+}
+
+.small-icons:visited {
+  color: white;
+}
+
+.small-icons > svg {
+  color: white;
+}
+
+.small-icons > svg:visited {
+  color: white;
+}
+
 /* Position and sizing of burger button */
 .bm-burger-button {
   position: fixed;
@@ -9,12 +75,12 @@
 
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
-  background: white;
+  background: #50E3C2;
 }
 
 /* Color/shape of burger icon bars on hover*/
 .bm-burger-bars-hover {
-  background: #a90000;
+  background: white;
 }
 
 /* Position and sizing of clickable cross button */
@@ -60,14 +126,10 @@ Note: Beware of modifying this element as it can break the animations - you shou
 /* Individual item */
 .bm-item {
   display: inline-block;
-  font-size: 60px;
-  padding: 10px; 
+  font-size: 90px;
+  padding: 30px; 
 }
 
-.smallIcons {
-  display: inline-block;
-  font-size: 10px;
-}
 
 /* Styling of overlay */
 .bm-overlay {
