Migrating to Webpack 4

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,5 @@
-
 @import "helpers/variables";
-
+@import "vendor/normalize.css";
 @import "components/navigation";
 @import "components/fonts";
 @import "layouts/home";
