--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -6,6 +6,9 @@
   color: white;
 }
 
+.menu-item:link {
+  color: white;
+}
 .menu-item:focus {
   color: #50E3C2;
 }
@@ -52,6 +55,9 @@
   text-decoration: none;
 }
 
+.small-icons:link {
+  color: white;
+}
 .small-icons:visited {
   color: white;
 }
