Added an ipad view

--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -35,7 +35,6 @@ li.li-menu-item:visited {
 }
 
 .nav-down{
-  position: absolute;
   bottom: 0px;
   display: inline-flex!important;
   outline: none;
@@ -134,6 +133,8 @@ Note: Beware of modifying this element as it can break the animations - you shou
 .bm-item-list {
   color: white;
   padding: 0.8em;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Individual item */
@@ -148,3 +149,34 @@ Note: Beware of modifying this element as it can break the animations - you shou
 .bm-overlay {
   background: rgba(0, 0, 0, 0.3);
 }
+/*
+@media screen and (max-width: 1000px) {
+  .bm-item {
+    font-size: 20px;
+  }
+
+  .small-icons{
+    font-size: 11px;
+  }
+
+}
+*/
+/* Small devices (landscape phones, 576px and up)b*/
+@media (min-width: 576px) { 
+  .bm-item {
+    font-size: 20px;
+  }
+
+  .small-icons{
+    font-size: 11px;
+  }
+}
+ 
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {  }
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {  }
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {  }
