--- a/src/styles/layouts/_home.scss
+++ b/src/styles/layouts/_home.scss
@@ -143,6 +143,18 @@ h3 {
   font-size: 150px; 
 }
 
+#form-hire-me{
+  width: 1200px;
+}
+
+.triangleish-shape .change-size{
+  margin-left: -20%;
+}
+
+.change-size-form{
+  margin-left: 10%;
+}
+
 .contact-wrapper{
         width: 100%;
     height: 100vh;
@@ -207,3 +219,78 @@ position: relative;
   margin-left: 30%;
   margin-top: 20%;
 }
+
+/* Small devices (landscape phones, 576px and up)b*/
+@media (min-width: 576px) { 
+}
+ 
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) { 
+  #myName{
+    font-size: 90px;
+  }
+
+  #image-div{
+    width: 15%!important;
+    background-size: contain!important;
+  } 
+
+  .content .content-right{
+    width: 90%;
+  }
+
+  .title-tag-about{
+    width: 35%;
+  }
+
+  .triangleish-shape{
+    margin-left: -68%;
+    width: 100%; 
+    transform: skew(-45deg);
+  }
+  .triangleish-content{
+    left: 80%;
+    transform: translateX(-50%) translateY(-50%) skew(45deg)
+  }
+
+  .triangle-content-div > p {
+    font-size: 15px;
+  }
+
+  .triangle-content-div > .title-tag{
+    font-size: 30px;
+  }
+
+  .form-shape{
+    top: 65%;
+
+  }
+
+  #form-hire-me{
+    width: 700px;
+    padding-left: 10%;
+  }
+
+  .triangle-content-div{
+    margin-left: 40%;
+    margin-top: 15%;
+  }
+
+  .bm-item{
+    margin-left: -50px;
+  }
+
+  .change-size{
+    margin-left: -120%;
+  }
+
+  .change-size-form{
+    margin-left: 45%;
+  }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {  }
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {  }
