--- a/src/styles/layouts/_home.scss
+++ b/src/styles/layouts/_home.scss
@@ -221,11 +221,11 @@ position: relative;
 }
 
 /* Small devices (landscape phones, 576px and up)b*/
-@media (min-width: 576px) { 
+@media (max-width: 576px) { 
 }
  
 /* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) { 
+@media (max-width: 768px) { 
   #myName{
     font-size: 90px;
   }
@@ -290,7 +290,7 @@ position: relative;
 }
 
 /* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) {  }
+@media (max-width: 992px) {  }
 
 /* Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {  }
+@media (max-width: 1200px) {  }
