--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -154,15 +154,29 @@ Note: Beware of modifying this element as it can break the animations - you shou
 @media (max-width: 576px) { 
   .bm-item {
     font-size: 20px;
+    padding: 10px;
+    margin-left: -30%;
   }
 
   .small-icons{
-    font-size: 11px;
+    font-size: 11px; 
+  }
+
+  .nav-down{
+    bottom: 0px;
+    outline: none;
+  }
+
+  .nav-down-li:not(:last-child)::after {
+    content: "";
+    padding-right: 5px;
+    padding-left: 5px;
+    font-size: 10px;
   }
 }
  
 /* Medium devices (tablets, 768px and up) */
-@media (max-width: 768px) { 
+@media (min-width: 577px) and (max-width: 768px) { 
   .bm-item {
     font-size: 20px;
   }
@@ -173,8 +187,18 @@ Note: Beware of modifying this element as it can break the animations - you shou
   
 }
 
-/* Large devices (desktops, 992px and up) */
-@media (max-width: 992px) {  }
 
-/* Extra large devices (large desktops, 1200px and up) */
-@media (max-width: 1200px) {  }
+/* Extra large devices (large desktops, 1024px and up) */
+@media (min-width: 769px) and (max-width: 1024px) { 
+  .bm-item {
+    font-size: 50px;
+    margin-left: -10%
+  }
+
+  .small-icons{
+    font-size: 15px;
+    padding: 0;
+  }
+
+
+}
