--- a/src/styles/layouts/_home.scss
+++ b/src/styles/layouts/_home.scss
@@ -17,15 +17,18 @@ body > #root > div > .cComponent {
 
 .thought{
     color:#50E3C2;
-    font-size: 11px;
+    font-size: 15px;
     position: fixed;
     bottom: 50px;
     height: 20px;
     width: 100%;
     padding-left: 1%;
-    text-shadow: 2px 15px 18px #50E3C2;
+    text-shadow: 0.05em 0 black, 0 0.05em black, -0.05em 0 black, 0 -0.05em black, -0.05em -0.05em black, -0.05em 0.05em black, 0.05em -0.05em black, 0.05em 0.05em black;
 }
 
+.external-link{
+  color: #50e3c2
+}
 
 .content {
   display: flex;
@@ -88,58 +91,70 @@ body > #root > div > .cComponent {
 }
 
 /* Family */
+
+
 .slide-container {
   width: 100%;
   height: 100vh;
-}
- 
-h3 {
-  text-align: center; 
-  }
- 
-.each-slide > div {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: repeat-x;
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
-  opacity: 0.5;
+  display: inline-flex;
+  background-color: rgba(20, 245, 234, 0.22)
 }
 
-#text-family-center{
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 20px;
-  color: black;
-  padding: 1%;
-  font-weight: bold;
+.slide-div{
+ width: 65%;
 }
- 
-.each-fade {
+
+.each-slide > div {
   display: flex;
-}
- 
-.each-fade .image-container {
-  width: 100%;
-  overflow: hidden;
-}
- 
-.each-fade .image-container img {
-  width: 100%;
+  justify-content: center;
+  height: 100vh;
   background-size: cover;
 }
 
+.react-slideshow-container .nav{
+  border-radius: 0%;
+  height: 100vh;
+  background: rgba(255, 255, 255, 1);
+}
 
+#text-family-center {
+  width: 35%;
+  padding: 1%;
+  margin: auto;
+}
+
+#text-family-center > h1 { 
+  color: #d54d7b; 
+  font-family: "Great Vibes", 
+  cursive; font-size: 165px; 
+  line-height: 160px; 
+  font-weight: normal; 
+  margin-bottom: 0px; 
+  margin-top: 0px; 
+  text-align: center; 
+  text-shadow: 0 1px 1px #fff; 
+}
+
+
+#text-family-center > p { 
+  color: #7a7c7f; 
+  font-size: 29px; 
+  font-family: "Libre Baskerville", serif; 
+  line-height: 45px; 
+  text-align: center; 
+  text-shadow: 0 1px 1px #fff; 
+  padding-top: 20px; 
+}
+
+
+#text-family-center > p.byline { 
+  font-style: italic; 
+  color: #B6B6B6; 
+  font-size: 24px; 
+  margin-top: 20px; 
+  text-align: center; 
+  text-shadow: 0 1px 1px #fff; 
+}
 
 /* Hire Me */
 .big-title{
@@ -160,7 +175,7 @@ h3 {
 }
 
 .contact-wrapper{
-        width: 100%;
+    width: 100%;
     height: 100vh;
     margin: 0;
     padding: 0;
@@ -212,7 +227,7 @@ position: relative;
 }
 
 .triangleish-content{
-      position: absolute;
+    position: absolute;
     width: 100%;
     height: 100%;
     left: 50%;
@@ -222,6 +237,14 @@ position: relative;
 .triangle-content-div{
   margin-left: 25%;
   margin-top: 10%;
+}
+
+.hire-me-p{
+  line-height: 1.5;
+}
+
+.hire-me-contact-div{
+  margin-top: -5%;
 }
 
 /* Small devices (landscape phones, 576px and up)b*/
