Added text shadow to the hire me page

--- a/src/styles/layouts/_home.scss
+++ b/src/styles/layouts/_home.scss
@@ -241,6 +241,7 @@ position: relative;
 
 .hire-me-p{
   line-height: 1.5;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 
