The CSS wasnt working on prod

--- a/src/styles/layouts/_home.scss
+++ b/src/styles/layouts/_home.scss
@@ -49,6 +49,7 @@ body > #root > div > .cComponent {
 
 .title-tag{
     font-size: 70px;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 .title-tag-about{
